--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -2,7 +2,7 @@ name: Linux NPU(Ascend)
 
 on:
   schedule:
-    - cron: '0 12 * * 7'
+    - cron: '0 12 * * *'
   issue_comment:
     types: [created]
 
