--- a/.github/workflows/ort-pypi.yaml
+++ b/.github/workflows/ort-pypi.yaml
@@ -3,11 +3,12 @@ name: Build and publish to PyPI
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 12 * * *'
+    - cron: '0 11 * * 7'
 
 jobs:
   build:
     name: Build for ${{ matrix.arch }}
+    if: ${{ github.repository_owner == 'Ascend' }}
     runs-on: ${{ matrix.runner }}
     container:
       image: ${{ matrix.image }}
