Add workflows for build torch & torch_npu

--- a/.github/workflows/ascend_npu-test.yml
+++ b/.github/workflows/ascend_npu-test.yml
@@ -9,7 +9,8 @@ on:
       - ".github/workflows/_ascend_npu_build_torch.yml"
       - ".github/workflows/_ascend_npu_build_torch_npu.yml"
       - ".github/workflows/_ascend_npu_ut.yml"
-      - ".github/workflows/_ascend_npu_benchmark.yml"
+      # - ".github/workflows/_ascend_npu_benchmark.yml"
+      - ".github/workflows/_ascend_npu_torchtune.yml"
       - ".ci/**"
       - "ascend_npu/**"
       - "src/**"
@@ -22,7 +23,8 @@ on:
       - ".github/workflows/_ascend_npu_build_torch.yml"
       - ".github/workflows/_ascend_npu_build_torch_npu.yml"
       - ".github/workflows/_ascend_npu_ut.yml"
-      - ".github/workflows/_ascend_npu_benchmark.yml"
+      # - ".github/workflows/_ascend_npu_benchmark.yml"
+      - ".github/workflows/_ascend_npu_torchtune.yml"
       - ".ci/**"
       - "ascend_npu/**"
       - "src/**"
