--- a/.github/workflows/torchtune.yaml
+++ b/.github/workflows/torchtune.yaml
@@ -13,7 +13,7 @@ on:
             - linux-arm64-npu-4
           default: 'linux-arm64-npu-1'
           description: 'Runner to run on'
-        images:
+        image:
           required: true
           type: choice
           options:
@@ -46,11 +46,26 @@ defaults:
     shell: bash -el {0}
 
 jobs:
+  prepare:
+    runs-on: ubuntu-latest
+    outputs:
+      runner: ${{ steps.set.outputs.runner }}
+      image: ${{ steps.set.outputs.image }}
+      device: ${{ steps.set.outputs.device }}
+    steps:
+      - id: set
+        run: |
+          echo "runner=${{ github.event.inputs.runner || 'linux-arm64-npu-1' }}" >> $GITHUB_OUTPUT
+          echo "image=${{ github.event.inputs.image || 'ascendai/cann:latest' }}" >> $GITHUB_OUTPUT
+          echo "device=${{ github.event.inputs.device || '/dev/davinci0' }}" >> $GITHUB_OUTPUT
+          
   torchtune:
+    needs: prepare
     name: run torchtune for torch_npu
-    runs-on: ${{ inputs.runner }}
+    
+    runs-on: ${{ needs.prepare.outputs.runner }}
     container:
-      image: ${{ inputs.image }}
+      image: ${{ needs.prepare.outputs.image }}
       env:
         HF_ENDPOINT: https://hf-mirror.com
 
