--- a/.github/workflows/torchtune.yaml
+++ b/.github/workflows/torchtune.yaml
@@ -115,7 +115,7 @@ jobs:
 
       - name: Download Qwen2.5 model
         run: |
-          export HF_ENDPOINT='https://hf-mirror.com'
+          export HF_ENDPOINT=https://hf-mirror.com
           huggingface-cli download --resume-download Qwen/Qwen2.5-0.5B-Instruct \
             --local-dir /tmp/Qwen2.5-0.5B-Instruct \
             --token os.environ["HF_TOKEN"]
