--- a/.github/workflows/torchtune.yaml
+++ b/.github/workflows/torchtune.yaml
@@ -117,8 +117,8 @@ jobs:
         run: |
           export HF_ENDPOINT=https://hf-mirror.com
           huggingface-cli download --resume-download Qwen/Qwen2.5-0.5B-Instruct \
-            --local-dir /tmp/Qwen2.5-0.5B-Instruct \
-            --token os.environ["HF_TOKEN"]
+            --local-dir /tmp/Qwen2.5-0.5B-Instruct # \
+            # --token os.environ["HF_TOKEN"]
 
       - name: Run torchtune with lora finetune
         run: |
