--- a/.github/workflows/torchtune.yaml
+++ b/.github/workflows/torchtune.yaml
@@ -75,7 +75,6 @@ jobs:
       image: ${{ needs.prepare.outputs.image }}
       env:
         HF_ENDPOINT: https://hf-mirror.com
-        HF_TOKEN: ${{ secrets.HF_TOKEN }}
         
     steps:
       - name: Show NPU info
@@ -114,11 +113,13 @@ jobs:
           pip list
 
       - name: Download Qwen2.5 model
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
           export HF_ENDPOINT=https://hf-mirror.com
           huggingface-cli download --resume-download Qwen/Qwen2.5-0.5B-Instruct \
-            --local-dir /tmp/Qwen2.5-0.5B-Instruct # \
-            # --token os.environ["HF_TOKEN"]
+            --local-dir /tmp/Qwen2.5-0.5B-Instruct \
+            --token $HF_TOKEN
 
       - name: Run torchtune with lora finetune
         run: |
