--- a/.github/workflows/_ascend_npu_torchtune.yml
+++ b/.github/workflows/_ascend_npu_torchtune.yml
@@ -108,15 +108,19 @@ jobs:
         working-directory: ascend_npu
         run: |
           pip install ${{ inputs.torch-npu-artifact }}
-      
+          
+      - name: Show environment info
+        run: |
+          pip list
+          
       - name: Download Qwen2.5 model
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
           export HF_ENDPOINT=https://hf-mirror.com
-          tune download Qwen/Qwen2.5-0.5B-Instruct \
-            --output-dir /tmp/Qwen2.5-0.5B-Instruct \
-            --hf-token $HF_TOKEN
+          huggingface-cli download Qwen/Qwen2.5-0.5B-Instruct \
+            --local-dir /tmp/Qwen2.5-0.5B-Instruct \
+            --token $HF_TOKEN
 
       - name: Run torchtune with lora finetune
         run: |
