--- a/.github/workflows/_ascend_npu_build_torch_npu.yml
+++ b/.github/workflows/_ascend_npu_build_torch_npu.yml
@@ -120,14 +120,14 @@ jobs:
         run: |
           pip install ${{ steps.list-dist.outputs.dist-name }}
 
-      - name: List torch_npu version
-        id: list-version
-        run: |
-          torch_version=$(python -c "import torch; print(torch.__version__)")
-          torch_npu_version=$(python -c "import torch_npu; print(torch_npu.__version__)")
-          echo "torch version: ${torch_version}"
-          echo "torch_npu version: ${torch_npu_version}"
-          echo "torch-npu-version=${torch_npu_version}" >> $GITHUB_OUTPUT
+      # - name: List torch_npu version
+      #   id: list-version
+      #   run: |
+      #     torch_version=$(python -c "import torch; print(torch.__version__)")
+      #     torch_npu_version=$(python -c "import torch_npu; print(torch_npu.__version__)")
+      #     echo "torch version: ${torch_version}"
+      #     echo "torch_npu version: ${torch_npu_version}"
+      #     echo "torch-npu-version=${torch_npu_version}" >> $GITHUB_OUTPUT
 
       - name: Upload distribution artifact
         id: upload-dist
@@ -142,5 +142,5 @@ jobs:
       - name: Write to workflow job summary
         if: ${{ steps.upload-dist.outputs.artifact-url }}
         run: |
-          echo "## torch_npu-${{ steps.list-version.outputs.torch-npu-version }} built successfully! :rocket:" >> $GITHUB_STEP_SUMMARY
+          # echo "## torch_npu-${{ steps.list-version.outputs.torch-npu-version }} built successfully! :rocket:" >> $GITHUB_STEP_SUMMARY
           echo "You can download the distribution package [here](${{ steps.upload-dist.outputs.artifact-url }})." >> $GITHUB_STEP_SUMMARY
