--- a/.github/workflows/_ascend_npu_build_torch_npu.yml
+++ b/.github/workflows/_ascend_npu_build_torch_npu.yml
@@ -66,6 +66,7 @@ jobs:
           repository: Ascend/pytorch
           submodules: recursive
           path: torch_npu
+          ref: d33df559f6aa3c73c44e9c3a9bed3490faf07566
 
       - name: Install torch_npu dependencies
         working-directory: torch_npu
