--- a/.github/workflows/ascend_npu-test.yml
+++ b/.github/workflows/ascend_npu-test.yml
@@ -135,24 +135,24 @@ jobs:
       torch-artifact: ${{ needs.build-torch.outputs.torch-artifact }}
       torch-npu-artifact: ${{ needs.build.outputs.torch-npu-artifact }}
 
-  # benchmark:
-  #   name: Run benchmarks
-  #   needs:
-  #     - prepare
-  #     - build-torch
-  #     - build
-  #     - test
-  #   if: |
-  #     !cancelled() && github.event_name != 'repository_dispatch' &&
-  #     (success() || (needs.build-torch.result == 'skipped' && needs.build.result == 'success'))
-  #   uses: ./.github/workflows/_ascend_npu_benchmark.yml
-  #   with:
-  #     runner: ${{ needs.prepare.outputs.runner }}
-  #     image: ${{ needs.prepare.outputs.image }}
-  #     torch-artifact: ${{ needs.build-torch.outputs.torch-artifact }}
-  #     torch-npu-artifact: ${{ needs.build.outputs.torch-npu-artifact }}
-  #   secrets:
-  #     pr-token: ${{ secrets.COSDT_BOT_TOKEN }}
+  benchmark:
+    name: Run benchmarks
+    needs:
+      - prepare
+      - build-torch
+      - build
+      - test
+    if: |
+      !cancelled() && github.event_name != 'repository_dispatch' &&
+      (success() || (needs.build-torch.result == 'skipped' && needs.build.result == 'success'))
+    uses: ./.github/workflows/_ascend_npu_benchmark.yml
+    with:
+      runner: ${{ needs.prepare.outputs.runner }}
+      image: ${{ needs.prepare.outputs.image }}
+      torch-artifact: ${{ needs.build-torch.outputs.torch-artifact }}
+      torch-npu-artifact: ${{ needs.build.outputs.torch-npu-artifact }}
+    # secrets:
+    #   pr-token: ${{ secrets.COSDT_BOT_TOKEN }}
 
   torchtune:
     name: Run torchtune for torch_npu
