--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -113,7 +113,7 @@ jobs:
 
       - name: Install torch
         run: |
-            pip install torch==2.7.0 torch_npu --index-url https://download.pytorch.org/whl/cpu
+            pip install torch torch_npu==2.7.1rc1
 
       - name: Install torch_npu dependencies
         # if: ${{ !inputs.torch-artifact }}
@@ -154,7 +154,8 @@ jobs:
 
       - name: Install project dependencies
         run: |
-          pip install -r requirements.txt
+          pip install tabulate
+        #   pip install -r requirements.txt
 
       - name: Show environment info
         run: |
