--- a/.github/workflows/_ascend_npu_benchmark.yml
+++ b/.github/workflows/_ascend_npu_benchmark.yml
@@ -124,7 +124,7 @@ jobs:
 
       - name: Install project dependencies
         run: |
-          pip install -r requirements.txt
+          pip install tabulate
 
       - name: Show environment info
         run: |
